refactor: 코드 일관성을 위한 수정